# stm32f4xx-dma-i2c-example

./: Cargo.toml  README.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: dma_display_connector.rs  main.rs
