[package]
authors = ["SpeedCrash100 <SpeedCrash100@yandex.ru>"]
edition = "2018"
readme = "README.md"
name = "stm32f4xx-dma-i2c-example"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1"
cortex-m-semihosting = "0.5.0"
panic-halt = "0.2.0"
critical-section = "1.1"
heapless = "0.7"
nb = "1.0"
display-interface = "0.4"
ssd1306 = "0.7"
embedded-graphics =  "0.7.1"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f411", "rtic"]
git = "https://github.com/SpeedCrash100/stm32f4xx-hal.git"
branch = "nb-dma-i2c"


# this lets you use `cargo fix`!
[[bin]]
name = "stm32f4xx-dma-i2c-example"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
